<resources>
    <string name="app_name">Timetable App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">0</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_button_value">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="random_value_text">R</string>
    <string name="second_fragment_header">Here is a random number between 0 and %d.</string>
    <string name="button_to_activities_text">Activities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_menu_item_text">Home</string>
    <string name="start_time">Start Time:</string>
    <string name="tags">Tags:</string>
    <string name="end_time">End Time:</string>
    <string name="notes">Notes:</string>
    <string name="last_edited">Last Edited:</string>
    <string name="name">Name</string>
    <string name="add_activity_name">Name:</string>
    <string name="add_activity_notes">Notes:</string>
    <string name="add_activity_start_time">Start Time:</string>
    <string name="add_activity_end_time">End Time:</string>
    <string name="add_activity_tags">Tags:</string>
    <string name="add_activity_name_value">Name</string>
    <string name="add_activity_notes_value">Notes</string>
    <string name="set_time">Set Time</string>
</resources>
